--- a/template/default/article.htm
+++ b/template/default/article.htm
@@ -19,7 +19,7 @@
           <h1><!--{$article.title}--></h1>
           <div class="article-info">
             <div class="article-author-time">
-              <a href="<!--{$article.user.url}-->" target="_blank"><!--{$article.user.name}--></a>
+              <!--{$article.user.at}-->
               <span class="time"><!--{$article.pubdate|date:"Y-m-d H:s"}--></span>
             </div>
             <div class="share-area">
