--- a/template/iCMS/mobile/user/navbar.htm
+++ b/template/iCMS/mobile/user/navbar.htm
@@ -31,8 +31,9 @@
         <li<!--{if $pg=="publish"}--> class="active"<!--{/if}-->><a href="<!--{iCMS:router url='/user/publish'}-->"><i class="fa fa-edit"></i> 发表文章</a></li>
         <li<!--{if $pg=="article"}--> class="active"<!--{/if}-->><a href="<!--{iCMS:router url='/user/article'}-->"><i class="fa fa-dashboard"></i> 我的文章</a></li>
         <li<!--{if $pg=="category"}--> class="active"<!--{/if}-->><a href="<!--{iCMS:router url='/user/category'}-->"><i class="fa fa-list-alt"></i> 我的分类</a></li>
+        <li<!--{if $pg=="inbox"}--> class="active"<!--{/if}-->><a href="<!--{iCMS:router url='/user/inbox'}-->"><i class="fa fa-envelope-o"></i> 我的私信</a></li>
         <li<!--{if $pg=="comment"}--> class="active"<!--{/if}-->><a href="<!--{iCMS:router url='/user/comment'}-->"><i class="fa fa-comments"></i> 我的评论</a></li>
-        <li<!--{if $pg=="favorite"}--> class="active"<!--{/if}-->><a href="<!--{iCMS:router url='/user/manage/favorite'}-->"><i class="fa fa-star"></i> 我的收藏</a></li>
+        <!-- <li<!--{if $pg=="favorite"}--> class="active"<!--{/if}-->><a href="<!--{iCMS:router url='/user/manage/favorite'}-->"><i class="fa fa-star"></i> 我的收藏</a></li> -->
         <li class="divider"></li>
         <li<!--{if $pg=="base"}--> class="active"<!--{/if}-->><a href="<!--{iCMS:router url='/user/profile/base'}-->"><i class="fa fa-info-circle"></i> 基本信息</a></li>
         <li<!--{if $pg=="avatar"}--> class="active"<!--{/if}-->><a href="<!--{iCMS:router url='/user/profile/avatar'}-->"><i class="fa fa-meh-o"></i> 修改头像</a></li>
