--- a/template/iCMS/public.common.htm
+++ b/template/iCMS/public.common.htm
@@ -84,6 +84,7 @@
       <div class="clearfix mt10"></div>
       <dt><label>内容：</label></dt>
       <dd><textarea class="pm_content" name="content"></textarea></dd>
+      <div class="pm_warnmsg clearfix">请填写私信内容。</div>
     </dl>
     <div class="buttons clearfix mt15">
       <a class="cancel">取消</a>
