--- a/template/iCMS/user/home.htm
+++ b/template/iCMS/user/home.htm
@@ -34,12 +34,6 @@
           <div class="card_data">
             <ul>
               <li class='last'>
-                <a href="<!--{$user.urls.share}-->">
-                <span class="text_count">48864</span>
-                <span class="text_atr">分享</span>
-                </a>
-              </li>
-              <li>
                 <a href="<!--{$user.urls.fans}-->">
                 <span class="text_count"><!--{$user.fans|num10K}--></span>
                 <span class="text_atr">粉丝</span>
@@ -64,7 +58,7 @@
       </div>
       <div class="user_nav_wrap">
         <ul class="nav_list">
-          <li class="c"><a href="<!--{$user.urls.home}-->" title="文章" class="nav_icon icon_art">文章</a></li>
+          <li class="c"><a href="<!--{$user.urls.home}-->" title="文章"><i class="fa fa-file-text-o"></i> 文章</a></li>
           <li> <a href="<!--{$user.urls.favorite}-->" title="收藏" class="nav_icon icon_fav">收藏</a></li>
           <li> <a href="<!--{$user.urls.share}-->" title="分享" class="nav_icon icon_sha">分享</a></li>
         </ul>
