--- a/template/iCMS/user/profile.htm
+++ b/template/iCMS/user/profile.htm
@@ -17,7 +17,7 @@
           <div class="piece_hd"> <b class="hl"></b> <b class="hr"></b> </div>
           <div class="piece_bd clearfix">
             <div class="sidebar fl">
-              <h1><i class="icon_user"></i> 账号设置</h1>
+              <h1><i class="fa fa-cogs" style="font-size: 18px;"></i> 账号设置</h1>
               <div class="base_info">
                 <a href="<!--{iCMS:router url='/user/profile/base'}-->"<!--{if $pg=="base"}--> class="c"<!--{/if}-->><i class="fa fa-info-circle"></i> 基本信息</a><br>
                 <a href="<!--{iCMS:router url='/user/profile/avatar'}-->"<!--{if $pg=="avatar"}--> class="c"<!--{/if}-->><i class="fa fa-meh-o"></i> 修改头像</a><br>
