--- a/template/mobile/article.htm
+++ b/template/mobile/article.htm
@@ -13,7 +13,7 @@
         <article>
           <h1><!--{$article.title}--></h1>
           <div class="info">
-            <span class="label label-success"><!--{$article.user.link}--></span> 时间:<!--{$article.pubdate|date:"Y-m-d H:s"}-->　<span class="fs_btn btn btn-default">A<sup>+</sup></span>
+            <span class="label label-success"><!--{$article.user.at}--></span> 时间:<!--{$article.pubdate|date:"Y-m-d H:s"}-->　<span class="fs_btn btn btn-default">A<sup>+</sup></span>
           </div>
           <!--{if $article.tags_link}-->
           <div class="article_tags">
