--- a/public/ui/iCMS.user-6.0.0.css
+++ b/public/ui/iCMS.user-6.0.0.css
@@ -1,5 +1,4 @@
 body { background-color: #fff; background-image: url(img/bg-v6.png); _background-attachment: fixed; }
-
 /* userApp */
 .userApp_home { margin: 0 auto; width: 960px; background-color: #fff; }
 .userApp_home .main-col { float: left; width: 640px; margin-top: 10px; min-height: 900px; _height: 900px; border-right: 1px solid #E4E4E4; background: #fff; }
@@ -12,9 +11,9 @@ body { background-color: #fff; background-image: url(img/bg-v6.png); _background
 .userApp_home .txtList li a span { margin-left: 10px; }
 .avatar_list { }
 .avatar_list li { display: inline-block; margin-bottom: 4px; }
-.avatar_30 { width: 30px; height: 30px; border-radius: 3px;}
-.avatar_90 { width: 90px; height: 90px; border-radius: 4px;}
-.avatar_120 { width: 120px; height: 120px; border-radius: 4px;}
+.avatar_30 { width: 30px; height: 30px; border-radius: 3px; }
+.avatar_90 { width: 90px; height: 90px; border-radius: 4px; }
+.avatar_120 { width: 120px; height: 120px; border-radius: 4px; }
 /* --icon--- */
 .icon_manage { display: inline-block; width: 16px; height: 16px; background: url(img/manage.png) no-repeat top left; }
 .icon_user { display: inline-block; width: 16px; height: 16px; background: url(img/user.png) no-repeat top left; }
@@ -61,7 +60,8 @@ body { background-color: #fff; background-image: url(img/bg-v6.png); _background
 .user_nav_wrap .nav_list { height: 46px; font-size: 16px; float: left; overflow: hidden; width: 750px; margin-left: 22px; }
 .user_nav_wrap .nav_list li { height: 46px; line-height: 46px; float: left; display: inline; margin-left: -2px; }
 .user_nav_wrap .nav_list li.c { background: url(img/home-top-bg.png) repeat-x 0 -100px; }
-.user_nav_wrap .nav_list a { font-weight: bold; font-size: 14px; color: #5C6573; display: block; padding: 0 22px; position: relative; }
+.user_nav_wrap .nav_list a {font-weight: bold; font-size: 14px; color: #5C6573; display: block; padding: 0 22px; position: relative; }
+
 .nav_list a.nav_icon { background: url(img/nav_icon.png) no-repeat; padding-left: 43px; }
 .nav_list a.icon_art { background-position: 20px -85px; }
 .nav_list a.icon_fav { background-position: 20px -169px; }
@@ -79,34 +79,33 @@ body { background-color: #fff; background-image: url(img/bg-v6.png); _background
 #artList .list_top .info .date { float: right; }
 #artList .list_detail { margin-top: 5px; }
 #artList .list_detail .text { font-size: 12px; }
-#artList .list_detail .pic { /*height: 150px; */overflow: hidden; }
+#artList .list_detail .pic { /* height: 150px;  */overflow: hidden; }
 #artList .list_fun { text-align: right; }
 #artList .list_fun a { color: #333; margin-left: 10px; }
 /* ======userApp======== */
 /* ----home.btn-------- */
 #home_btn { font-weight: bold; margin-top: 10px; padding-left: 25px; padding-bottom: 15px; border-bottom: 1px dotted #DBDBDB; }
 #home_btn a { width: 90px; }
-
 .userApp-box { width: 960px; }
 .userApp-box .piece_hd { background: url(img/profile_hd_bg.png) no-repeat; }
 .userApp-box .piece_bd { min-height: 600px; background: url(img/profile_bd_bg.png) repeat-y; }
 .userApp-box .piece_ft { background: url(img/profile_ft_bg.png) no-repeat; }
 .userApp-box .sidebar { margin: 25px 0 0 35px; font-size: 14px; width: 147px; }
-.userApp-box .sidebar h1 { font-size: 16px; line-height: 130%; font-weight: normal; color: #333; }
+.userApp-box .sidebar h1 { font-size: 16px; line-height: 130%; font-weight: normal; color: #000; }
+.userApp-box .sidebar h1 i { font-size: 18px; color: #079CF1 }
 .userApp-box .sidebar .iconfont { color: #8DB933; }
 .userApp-box .sidebar .base_info { margin: 10px 0 20px 14px; }
 .userApp-box .sidebar a.c { font-weight: bold; }
 .userApp-box .sidebar a { padding: 0 10px; line-height: 28px; font-size: 14px; }
 .userApp-box .contents { font-size: 14px; width: 710px; margin-left: 35px; margin-top: 22px; }
-.userApp-box #user_form { position: relative;}
+.userApp-box #user_form { position: relative; }
 .userApp-box #user_form dl { margin-bottom: 12px; }
 .userApp-box #user_form dd { float: left; width: 105px; text-align: right; line-height: 26px; vertical-align: middle; color: #666; }
-.userApp-box #user_form dt { margin-bottom: 12px; font-size: 12px; color: #666;font-weight: normal; }
+.userApp-box #user_form dt { margin-bottom: 12px; font-size: 12px; color: #666; font-weight: normal; }
 .userApp-box .iner { _padding-top: -50px; display: inline; *vertical-align: 10px; }
 .userApp-box .title { background: url(img/profile_title_bg.png) no-repeat; width: 100%; height: 30px; line-height: 30px; padding-left: 20px; margin-bottom: 10px; }
 .userApp-box .title span { color: #70A700; font-size: 14px; font-weight: bold; height: 30px; line-height: 30px; }
-.userApp-box .w670 {width: 670px;margin-left: 5px;}
-
+.userApp-box .w670 { width: 670px; margin-left: 5px; }
 #profile_box .base select { width: 90px; font-size: 14px; }
 #profile_box .base textarea { height: 120px; width: 466px; border: 1px solid #cfcfcf; color: #666; padding: 5px; }
 #profile_box .unick span { color: #f00; margin-left: 10px; margin-right: 5px; font-weight: bold; }
@@ -148,13 +147,12 @@ body { background-color: #fff; background-image: url(img/bg-v6.png); _background
 .account_bind .bind_logo li #bind_qq { clear: both; }
 .account_bind .bind_logo .bind_web .addSuccess { color: #690; line-height: 23px; padding-left: 12px; vertical-align: center; }
 .account_bind p.bind_tip { margin-top: 0; text-align: left; color: #999; }
-/*==manage==*/
-#coverpic_box  {width: 480px;height: 150px;border: 1px solid #D4D4D4;padding: 1px;}
-#coverpic {height: 150px;}
-/*pg_follow*/
+/* ==manage== */
+#coverpic_box { width: 480px; height: 150px; border: 1px solid #D4D4D4; padding: 1px; }
+#coverpic { height: 150px; }
+/* pg_follow */
 .pg_follow { }
 .pg_follow .avatar_list li { margin-right: 5px; }
 .pg_follow .avatar_list li .label-info { padding: 8px 5px; font-size: 14px; width: 80px; text-align: center; display: block; border-top-left-radius: 0; border-top-right-radius: 0; }
 .pg_follow .avatar_list li .avatar_90 { border-bottom-left-radius: 0; border-bottom-right-radius: 0; }
 .pg_follow .avatar_list li .btn_follow { display: none; width: 64px; border-top-left-radius: 0; border-top-right-radius: 0; }
-
