--- a/template/iCMS/user/manage.htm
+++ b/template/iCMS/user/manage.htm
@@ -17,14 +17,15 @@
           <div class="piece_hd"> <b class="hl"></b> <b class="hr"></b> </div>
           <div class="piece_bd clearfix">
             <div class="sidebar fl">
-              <h1><i class="fa fa-dashboard"></i> 我的内容</h1>
+              <h1><i class="fa fa-dashboard" style="font-size: 18px;"></i> 我的内容</h1>
               <div class="base_info">
                 <p class="clearfix"><a href="<!--{iCMS:router url='/user/publish'}-->"<!--{if $pg=="publish"}--> class="c"<!--{/if}-->><i class="fa fa-edit"></i> 发表文章</a></p>
                 <p class="clearfix"><a href="<!--{iCMS:router url='/user/article'}-->"<!--{if $pg=="article"}--> class="c"<!--{/if}-->><i class="fa fa-dashboard"></i> 我的文章</a></p>
                 <p class="clearfix"><a href="<!--{iCMS:router url='/user/category'}-->"<!--{if $pg=="category"}--> class="c"<!--{/if}-->><i class="fa fa-list-alt"></i> 我的分类</a></p>
                 <p class="clearfix"><a href="<!--{iCMS:router url='/user/comment'}-->"<!--{if $pg=="comment"}--> class="c"<!--{/if}-->><i class="fa fa-comments"></i> 我的评论</a></p>
-                <p class="clearfix"><a href="<!--{iCMS:router url='/user/manage/favorite'}-->"<!--{if $pg=="favorite"}--> class="c"<!--{/if}-->><i class="fa fa-star"></i> 我的收藏</a></p>
-                <p class="clearfix"><a href="<!--{iCMS:router url='/user/manage/share'}-->"<!--{if $pg=="share"}--> class="c"<!--{/if}-->><i class="fa fa-share-alt"></i> 我的分享</a></p>
+                <p class="clearfix"><a href="<!--{iCMS:router url='/user/inbox'}-->"<!--{if $pg=="inbox"}--> class="c"<!--{/if}-->><i class="fa fa-envelope-o"></i> 我的私信</a></p>
+                <!-- <p class="clearfix"><a href="<!--{iCMS:router url='/user/manage/favorite'}-->"<!--{if $pg=="favorite"}--> class="c"<!--{/if}-->><i class="fa fa-star"></i> 我的收藏</a></p> -->
+                <!-- <p class="clearfix"><a href="<!--{iCMS:router url='/user/manage/share'}-->"<!--{if $pg=="share"}--> class="c"<!--{/if}-->><i class="fa fa-share-alt"></i> 我的分享</a></p> -->
                 <p class="clearfix"><a href="<!--{iCMS:router url='/user/manage/follow'}-->"<!--{if $pg=="follow"}--> class="c"<!--{/if}-->><i class="fa fa-heart-o"></i> 我的关注</a></p>
                 <p class="clearfix"><a href="<!--{iCMS:router url='/user/manage/fans'}-->"<!--{if $pg=="fans"}--> class="c"<!--{/if}-->><i class="fa fa-group"></i> 我的粉丝</a></p>
               </div>
@@ -36,22 +37,24 @@
                   <input name="action" type="hidden" value="manage" />
                   <input name="pg" type="hidden" value="<!--{$pg}-->" />
                   <!--{switch from=$pg}-->
-                  <!--{case value="publish"}-->
-                  <!--{include file="./manage/publish.htm" import="true"}-->
-                  <!--{case value="category"}-->
-                  <!--{include file="./manage/category.htm" import="true"}-->
-                  <!--{case value="article"}-->
-                  <!--{include file="./manage/article.htm" import="true"}-->
-                  <!--{case value="comment"}-->
-                  <!--{include file="./manage/comment.htm" import="true"}-->
-                  <!--{case value="favorite"}-->
-                  <!--{include file="./manage/favorite.htm" import="true"}-->
-                  <!--{case value="share"}-->
-                  <!--{include file="./manage/share.htm" import="true"}-->
-                  <!--{case value="follow"}-->
-                  <!--{include file="./manage/follow.htm" import="true"}-->
-                  <!--{case value="fans"}-->
-                  <!--{include file="./manage/fans.htm" import="true"}-->
+                    <!--{case value="publish"}-->
+                      <!--{include file="./manage/publish.htm" import="true"}-->
+                    <!--{case value="category"}-->
+                      <!--{include file="./manage/category.htm" import="true"}-->
+                    <!--{case value="article"}-->
+                      <!--{include file="./manage/article.htm" import="true"}-->
+                    <!--{case value="comment"}-->
+                      <!--{include file="./manage/comment.htm" import="true"}-->
+                    <!--{case value="inbox"}-->
+                      <!--{include file="./manage/inbox.htm" import="true"}-->
+                    <!--{case value="favorite"}-->
+                      <!--{include file="./manage/favorite.htm" import="true"}-->
+                    <!--{case value="share"}-->
+                      <!--{include file="./manage/share.htm" import="true"}-->
+                    <!--{case value="follow"}-->
+                      <!--{include file="./manage/follow.htm" import="true"}-->
+                    <!--{case value="fans"}-->
+                      <!--{include file="./manage/fans.htm" import="true"}-->
                   <!--{/switch}-->
                 </form>
               </div>
