--- a/template/iCMS/user/manage/comment.htm
+++ b/template/iCMS/user/manage/comment.htm
@@ -1,6 +1,4 @@
 <style>
-.cmt-avatar{width: 36px;height:36px;}
-.cmt-avatar img{width: 35px;height:35px;}
 .cmt-reply{margin-left: 20px;}
 </style>
 <div class="title"><span>我的评论</span></div>
@@ -12,7 +10,7 @@
 			<tbody>
 			<!--{iCMS:comment:list loop="true" page="true" row="10" total_cache="G" userid=$user.uid}-->
 				<tr id="id-<!--{$comment_list.id}-->">
-					<td class="cmt-avatar">
+					<td class="iCMS_avatar_s ">
 						<a title="<!--{$comment_list.user.name}-->" href="<!--{$comment_list.user.url}-->">
 							<img src="<!--{$comment_list.user.avatar}-->">
 						</a>
@@ -46,7 +44,7 @@
 							<span class="label label-info"><i class="fa fa-thumbs-o-up"></i> <!--{$comment_list.up}--></span>
 						</div>
 					</td>
-					<td><a href="javascript:;" class="del_comment ml10 tip" data-id="<!--{$comment_list.id}-->" title="删除评论"><i class="fa fa-times"></i></a></td>
+					<td><a href="javascript:;" class="ml10 tip" data-action="del" data-id="<!--{$comment_list.id}-->" title="删除评论"><i class="fa fa-times"></i></a></td>
 				</tr>
 			<!--{/iCMS}-->
 			</tbody>
@@ -60,13 +58,17 @@
 </form>
 <script type="text/javascript">
 $(function(){
-	$(".del_comment").on('click',function(event) {
+	$("[data-action]").on('click',function(event) {
 		event.preventDefault();
-		var id = $(this).attr("data-id");
-		$.post("<!--{iCMS:router url='/user'}-->",{action:'delete',pg:'comment',id:id},
+		var param = {
+			'id':$(this).attr("data-id"),
+			'act':$(this).attr("data-action"),
+			'pg':'comment','action':'manage'
+		}
+		$.post("<!--{iCMS:router url='/user'}-->",param,
 		function(c) {
 			if (c.code) {
-				$("#id-"+id).hide('500',function() {
+				$("#id-"+param.id).hide('500',function() {
 					$(this).remove();
 				});
 			}else{
