--- a/template/iCMS/user/manage/follow.htm
+++ b/template/iCMS/user/manage/follow.htm
@@ -2,7 +2,7 @@
 <div class="pg_follow w670">
 	<ul class="avatar_list">
 		<!--{iCMS:user:follow loop="true" row="30" userid=$user.uid}-->
-		<li id="id_<!--{$user_follow.uid}-->">
+		<li id="id-<!--{$user_follow.uid}-->">
 		<a href="<!--{$user_follow.url}-->" target="_blank" ttitle="<!--{$user_follow.name}-->"><img class="avatar_90" data-tip="iCMS:ucard:<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->"></a>
 		<span class="label label-info"><!--{$user_follow.name}--></span>
 		<a href="javascript:;" data-param='{"uid":"<!--{$user_follow.uid}-->","name":"<!--{$user_follow.name}-->"}' class="btn btn_follow">取消关注</a>
@@ -33,7 +33,7 @@
 		$.post(iCMS.api('user', "&do=follow"),param,
 			function(c) {
 				if (c.code) {
-					$("#id_"+param['uid']).hide('500',function() {
+					$("#id-"+param['uid']).hide('500',function() {
 						$(this).remove();
 					});
 				}else{
