--- a/template/default/article.htm
+++ b/template/default/article.htm
@@ -45,7 +45,7 @@
           <blockquote><!--{$article.description}--></blockquote>
           <div class="article-detail">
             <!--{if $article.pic.url}-->
-            <p class="image"><img src="<!--{$article.pic.url}-->"/></p>
+            <p class="image"><img class="lazy" src="<!--{$article.pic.url}-->"/></p>
             <!--{/if}-->
             <div class="l-main-inner-ad"><!--正文内嵌图片广告 250x250--></div>
             <div class="article-body">
