--- a/template/mobile/index.htm
+++ b/template/mobile/index.htm
@@ -54,7 +54,7 @@
           <!--{if $article_list.pic.url}-->
           <div class="panel-thumb">
             <a href="<!--{$article_list.url}-->" target="_blank">
-            <img data-original="<!--{$article_list.pic.url}-->" src="<!--{$site.urls.ui}-->/img/img-default.png" width="100%">
+            <img class="lazy" data-src="<!--{$article_list.pic.url}-->" src="<!--{$site.urls.ui}-->/img/img-default.png" width="100%">
             </a>
           </div>
           <!--{/if}-->
